tests/baselines/reference/ifElseWithStatements1.errors.txt
tests/cases/compiler/ifElseWithStatements1.ts(2,5): error TS2304: Cannot find name 'f'.
tests/cases/compiler/ifElseWithStatements1.ts(4,5): error TS2304: Cannot find name 'f'.
tests/cases/compiler/ifElseWithStatements1.ts(4,5): error TS7027: Unreachable code detected.
tests/cases/compiler/ifElseWithStatements1.ts(10,9): error TS7027: Unreachable code detected.


==== tests/cases/compiler/ifElseWithStatements1.ts (4 errors) ====
    if (true)
        f();
        ~
!!! error TS2304: Cannot find name 'f'.
    else
        f();
        ~
!!! error TS2304: Cannot find name 'f'.
        ~
!!! error TS7027: Unreachable code detected.
    
    function foo(): boolean {
        if (true)
            return true;
        else
            return false;
            ~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    